--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,3 +24,13 @@ jobs:
       - run: npm install
       - run: npm run start &
       - run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID_STUDENT_REGISTRY_APP }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
+          wait-for-success: true
