--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,5 +32,5 @@ jobs:
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.SERVICE_ID_STUDENT_REGISTRY_APP }}
-          api-key: ${{ secrets.RENDER_TOKEN }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
           wait-for-success: true
