--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,30 +7,32 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  build_test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [22.x]
-
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Clone GitHub repository on the machine
+        uses: actions/checkout@v4
+
+      - name: Use node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 22
           cache: "npm"
-      - run: npm install
-      - run: npm run start &
-      - run: npm test
+
+      - name: Install program dependencies
+        run: npm install
+
+      - name: Run integration tests
+        run: npm run test
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build_test
     steps:
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.SERVICE_ID_STUDENT_REGISTRY_APP }}
-          api-key: ${{ secrets.MY_RENDER_API_KEY }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
           wait-for-success: true
